# mini-zero

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.py  main.py  mcts.py  mcts_agent.py  model.py  pred  random_agent.py  requirements.txt  result_cpp  self_play_train.py  test.in  test_cpp_py_results.py  utils.py
cpp/: analise.cpp  eval  evaluate.cpp  game.cpp  game.hpp  main.cpp  mct_search.cpp  mct_search.hpp  mcts.cpp  mcts.hpp  model.cpp  model.hpp  node.cpp  node.hpp  pred.cpp
